--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,24 @@
 
 a {
   text-decoration: none;
+  color: antiquewhite;
+}
+a:hover {
+  color: rgba(250, 235, 215, 0.726);
 }
 
 ul,
 ol {
   list-style: none;
   padding: 0%;
+}
+
+p:hover {
+  color: rgb(25, 90, 6);
+}
+
+h1 {
+  font-size: 25px;
 }
 
 /* ============= HEADER ========== */
@@ -58,7 +70,6 @@ ol {
 }
 
 .slogan {
-  font-size: 15px;
   text-align: center;
   color: brown;
   margin-top: 20px;
