--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,7 @@
     font-family: 'Merriweather', serif;
     color: brown;
 }
-
+/* NAVBAR DESPLEGABLE DE TENDENCIAS  */
 .navbar-nav {
     margin-left: auto;
   }
@@ -19,6 +19,7 @@
   }
   
   
+
 
 a{
     text-decoration: none;
@@ -35,7 +36,7 @@ ol{
 }
 p{
     &:hover{
-        color: rgb(25, 90, 6);
+        color: rgba(29, 102, 20, 0.963)
     }
 }
 
