--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,6 +40,13 @@ h1{
     font-size: 25px;
 }
 /* ============= HEADER ========== */
+
+.boton{
+    position: absolute;
+    right: 0;
+
+    
+}
 .links {
     font-family: 'Merriweather', serif;
     font-size: 15px;
