--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,33 @@
   color: brown;
 }
 
+/* ============ GALERIA =========== */
+.galeria {
+  padding: 15px;
+}
+
+.galeria-grilla {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  height: auto;
+}
+
+.foto-inicio2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  height: 30vh;
+  width: auto;
+}
+
+.foto-inicio3 {
+  display: none;
+}
+
 /* NAVBAR DESPLEGABLE DE TENDENCIAS  */
 .navbar-nav {
   margin-left: auto;
@@ -42,6 +69,11 @@ h1 {
 }
 
 /* ============= HEADER ========== */
+.boton {
+  position: absolute;
+  right: 0;
+}
+
 .links {
   font-family: "Merriweather", serif;
   font-size: 15px;
@@ -129,33 +161,6 @@ h1 {
 .fade {
   width: 35%;
   height: auto;
-}
-
-/* ============ GALERIA =========== */
-.galeria {
-  padding: 15px;
-}
-
-.galeria-grilla {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 20px;
-  width: 100%;
-  height: auto;
-}
-
-.foto-inicio2 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  height: 30vh;
-  width: auto;
-}
-
-.foto-inicio3 {
-  display: none;
 }
 
 /* ============ TABLET =========== */
