--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,15 @@ h1 {
   height: auto;
 }
 
+.zoom {
+  transition: transform 0.2s; /* Animation */
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
 /* ============ TABLET =========== */
 @media (min-width: 768px) {
   .header-title {
